[tool.poetry]
name = "spark-surveymonkey"
version = "0.1.0"
description = "Convert SurveyMonkey respones in JSON to a PySpark DataFrame"
authors = ["Emanuel Ferm <emanuel@eferm.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.6.1"
requests = "^2.23.0"
pandas = "^1.0.4"
jupyter = "^1.0.0"
py4j = "^0.10.9"
jq = "^1.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
